// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a++);
=====================================output=====================================
export default a++;

================================================================================
`;

exports[`snippet: #0 format 2`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (await a);
=====================================output=====================================
export default await a;

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a++).toString();
=====================================output=====================================
export default (a++).toString();

================================================================================
`;

exports[`snippet: #1 format 2`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (await a).toString();
=====================================output=====================================
export default (await a).toString();

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a++)?.toString();
=====================================output=====================================
export default (a++)?.toString();

================================================================================
`;

exports[`snippet: #2 format 2`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (await a)?.toString();
=====================================output=====================================
export default (await a)?.toString();

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (++ a);
=====================================output=====================================
export default ++a;

================================================================================
`;

exports[`snippet: #4 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (++ a).toString();
=====================================output=====================================
export default (++a).toString();

================================================================================
`;

exports[`snippet: #5 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (++ a)?.toString();
=====================================output=====================================
export default (++a)?.toString();

================================================================================
`;

exports[`snippet: #6 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (+a);
=====================================output=====================================
export default +a;

================================================================================
`;

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (+a)?.toString();
=====================================output=====================================
export default (+a)?.toString();

================================================================================
`;

exports[`snippet: #8 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function this_is_a_expression_not_a_declaration() {});
=====================================output=====================================
export default (function this_is_a_expression_not_a_declaration() {});

================================================================================
`;

exports[`snippet: #9 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function this_is_a_expression_not_a_declaration() {}).toString();
=====================================output=====================================
export default (function this_is_a_expression_not_a_declaration() {}.toString());

================================================================================
`;

exports[`snippet: #10 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (class this_is_a_expression_not_a_declaration {});
=====================================output=====================================
export default (class this_is_a_expression_not_a_declaration {});

================================================================================
`;

exports[`snippet: #11 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (class this_is_a_expression_not_a_declaration {}).toString();
=====================================output=====================================
export default (class this_is_a_expression_not_a_declaration {}.toString());

================================================================================
`;

exports[`snippet: #12 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (class this_is_a_expression_not_a_declaration {})?.toString();
=====================================output=====================================
export default (class this_is_a_expression_not_a_declaration {}?.toString());

================================================================================
`;

exports[`snippet: #13 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a in b);
=====================================output=====================================
export default a in b;

================================================================================
`;

exports[`snippet: #14 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a in b).toString();
=====================================output=====================================
export default (a in b).toString();

================================================================================
`;

exports[`snippet: #15 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a in b)?.toString();
=====================================output=====================================
export default (a in b)?.toString();

================================================================================
`;

exports[`snippet: #16 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a || b);
=====================================output=====================================
export default a || b;

================================================================================
`;

exports[`snippet: #17 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a || b).toString();
=====================================output=====================================
export default (a || b).toString();

================================================================================
`;

exports[`snippet: #18 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a || b)?.toString();
=====================================output=====================================
export default (a || b)?.toString();

================================================================================
`;

exports[`snippet: #19 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a , b);
=====================================output=====================================
export default (a, b);

================================================================================
`;

exports[`snippet: #20 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a , b)?.toString();
=====================================output=====================================
export default (a, b)?.toString();

================================================================================
`;

exports[`snippet: #21 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (1.);
=====================================output=====================================
export default 1;

================================================================================
`;

exports[`snippet: #22 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (1.).toString();
=====================================output=====================================
export default (1).toString();

================================================================================
`;

exports[`snippet: #23 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (1.)?.toString();
=====================================output=====================================
export default (1)?.toString();

================================================================================
`;

exports[`snippet: #24 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a = b);
=====================================output=====================================
export default (a = b);

================================================================================
`;

exports[`snippet: #25 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a = b).toString();
=====================================output=====================================
export default (a = b).toString();

================================================================================
`;

exports[`snippet: #26 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a = b)?.toString();
=====================================output=====================================
export default (a = b)?.toString();

================================================================================
`;

exports[`snippet: #27 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a += b);
=====================================output=====================================
export default (a += b);

================================================================================
`;

exports[`snippet: #28 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a += b).toString();
=====================================output=====================================
export default (a += b).toString();

================================================================================
`;

exports[`snippet: #29 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a += b)?.toString();
=====================================output=====================================
export default (a += b)?.toString();

================================================================================
`;

exports[`snippet: #30 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a ? b : c);
=====================================output=====================================
export default a ? b : c;

================================================================================
`;

exports[`snippet: #31 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a ? b : c).toString();
=====================================output=====================================
export default (a ? b : c).toString();

================================================================================
`;

exports[`snippet: #32 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a ? b : c)?.toString();
=====================================output=====================================
export default (a ? b : c)?.toString();

================================================================================
`;

exports[`snippet: #33 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (() =>{});
=====================================output=====================================
export default () => {};

================================================================================
`;

exports[`snippet: #34 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (() =>{}).toString();
=====================================output=====================================
export default (() => {}).toString();

================================================================================
`;

exports[`snippet: #35 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (() =>{})?.toString();
=====================================output=====================================
export default (() => {})?.toString();

================================================================================
`;

exports[`snippet: #36 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a\`\`);
=====================================output=====================================
export default a\`\`;

================================================================================
`;

exports[`snippet: #37 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a\`\`).toString();
=====================================output=====================================
export default a\`\`.toString();

================================================================================
`;

exports[`snippet: #38 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (a\`\`)?.toString();
=====================================output=====================================
export default a\`\`?.toString();

================================================================================
`;

exports[`snippet: #39 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (<a></a>);
=====================================output=====================================
export default <a></a>;

================================================================================
`;

exports[`snippet: #40 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (<a></a>).toString();
=====================================output=====================================
export default (<a></a>).toString();

================================================================================
`;

exports[`snippet: #41 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (<a></a>)?.toString();
=====================================output=====================================
export default (<a></a>)?.toString();

================================================================================
`;
